# agentic-vision

./: .gitignore  AMD_CLOUD_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md
backend/: .env  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: alert_engine.py  captioner.py  detector.py  notifier.py  query_engine.py  repository.py  text.py  video_processor.py
backend/app/storage/: database.py
backend/tests/: test_alert_engine.py  test_query_engine.py  test_text.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  speech.d.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/hooks/: useSpeechRecognition.ts
mobile/: .metadata  pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: main.dart
mobile/lib/models/: models.dart
mobile/lib/providers/: app_state.dart
mobile/lib/screens/: alerts_screen.dart  chat_screen.dart  dashboard_screen.dart  timeline_screen.dart  voice_conversation_screen.dart
mobile/lib/services/: api_service.dart
